==> Sgw32/UltiSID/Src/irq.c <==
#include "setup.h"
#include "irq.h"
#include "sid.h"

void InitHardware() {
	HAL_TIM_PWM_Start(&htim1,TIM_CHANNEL_1); //PWM
	HAL_TIM_OC_Start_IT(&htim2,TIM_CHANNEL_2); //IRQ
}
