==> Sgw32/UltiSID/IRQ.cpp <==
#include "setup.h"
#include "IRQ.h"
#include "SID.h"
#include "barebone_sounds.h"

void InitHardware() { // setup pins and IRQ
  // init irq
  Serial.println(" Init ");
  noInterrupts();
  pinMode(PC13,OUTPUT);
  //pinMode(BUTTON_1, INPUT_PULLUP);


#ifdef  USE_ROGER_CORE

  pinMode (AUDIO_OUT, PWM); //   audio output pin
  Timer1.setPeriod(getPeriod());

/*
  Timer2.setPrescaleFactor(1);
  Timer2.setMode(TIMER_CH2, TIMER_OUTPUTCOMPARE);
  Timer2.setPeriod(getMultiplier());
  Timer2.setCompare(TIMER_CH2, 1);
  Timer2.attachInterrupt(TIMER_CH2, irq_handler);*/
#endif
/*
#ifdef USE_STM32duino_CORE
  pinMode(AUDIO_OUT, OUTPUT);

  PWM->pause();
  PWM->setMode(1, TIMER_OUTPUT_COMPARE_PWM1, PA8);
  PWM->setPrescaleFactor(1);
  PWM->setOverflow( period * magic_number, TICK_FORMAT);
  PWM->resume();


  HardwareTimer *IRQtimer = new HardwareTimer(TIM2);
  IRQtimer->setMode(2, TIMER_OUTPUT_COMPARE);
  IRQtimer->setOverflow(multiplier, MICROSEC_FORMAT);
  IRQtimer->attachInterrupt(irq_handler);
  IRQtimer->resume();
#endif*/

  // Setting PORTC and PORTD pins as inputs
  for (int a=0; a<pinCountC; a++) {
    pinMode(portPinsC[a], INPUT);
  }
  for (int a=0; a<pinCountD; a++) {
    pinMode(portPinsD[a], INPUT);
  }
  
  // Attach an interrupt when RW goes LOW. Seems to work well.
  attachInterrupt(digitalPinToInterrupt(RW), ReadLines, FALLING );
  

  interrupts();
  Serial.println(" Init ok");
}
